--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -21,7 +21,7 @@ jobs:
             echo "IMAGE_TAG=${{ github.ref_name }}" >> "$GITHUB_ENV"
             echo "CREATE_IMAGE=true" >> "$GITHUB_ENV"
           elif [[ "${{ github.ref }}" == "refs/heads/master" ]]; then
-            echo "IMAGE_TAG=latest" >> "$GITHUB_ENV"
+            echo "IMAGE_TAG=master" >> "$GITHUB_ENV"
             echo "CREATE_IMAGE=true" >> "$GITHUB_ENV"
           else
             echo "CREATE_IMAGE=false" >> "$GITHUB_ENV"
