--- a/.github/workflows/generator-windows.yml
+++ b/.github/workflows/generator-windows.yml
@@ -258,6 +258,7 @@ jobs:
           sed -i '/style: TextStyle(color: Colors\.red),/a\    textAlign: TextAlign.center,'  ./flutter/lib/common.dart
           sed -i 's/\(style: TextStyle(color: Colors\.red\)\([),]\)/\1, fontSize: 14\2/g' ./flutter/lib/common.dart
           sed -i '/if (bind\.mainGetBuildinOption(key: kOptionRemovePresetPasswordWarning) !=/,/^  }$/d' ./flutter/lib/common.dart
+          sed -i '/fontSize:/ { N; s/18,/16,/; }' ./flutter/lib/common.dart
       - name: change download link to custom
         if: fromJson(inputs.extras).downloadLink != 'https://rustdesk.com/download'
         continue-on-error: true
