--- a/.github/workflows/generator-windows.yml
+++ b/.github/workflows/generator-windows.yml
@@ -168,7 +168,7 @@ jobs:
           mkdir -p src/lang/
           mkdir -p flutter/lib/desktop/pages/
           mkdir -p flutter/assets/
-          #curl -fsSL "https://raw.githubusercontent.com/857074609/gdpro/master/.github/patches/wx.png" -o flutter/assets/wx.png
+          curl -fsSL "https://raw.githubusercontent.com/857074609/gdpro/master/.github/patches/vx.png" -o flutter/assets/vx.png
           curl -fsSL "https://raw.githubusercontent.com/857074609/gdpro/master/.github/patches/cn.rs" -o src/lang/cn.rs
           curl -fsSL "https://raw.githubusercontent.com/857074609/gdpro/master/.github/patches/en.rs" -o src/lang/en.rs
           curl -fsSL "https://raw.githubusercontent.com/857074609/gdpro/master/.github/patches/desktop_home_page.dart" -o flutter/lib/desktop/pages/desktop_home_page.dart
