--- a/.github/workflows/generator-windows.yml
+++ b/.github/workflows/generator-windows.yml
@@ -76,7 +76,6 @@ env:
   #signing keys env variable checks
   ANDROID_SIGNING_KEY: "${{ secrets.ANDROID_SIGNING_KEY }}"
   MACOS_P12_BASE64: "${{ secrets.MACOS_P12_BASE64 }}"
-  UPLOAD_ARTIFACT: 'true'
   SIGN_BASE_URL: "${{ secrets.SIGN_BASE_URL }}"
   STATUS_URL: "${{ secrets.GENURL }}/updategh"
 
@@ -565,35 +564,68 @@ jobs:
           method: 'POST'
           customHeaders: '{"Content-Type": "application/json"}'
           data: '{"uuid": "${{ inputs.uuid }}", "status": "70% complete, this step takes about 5 minutes, be patient."}'
-      
-      - name: zip dlls
-        continue-on-error: true
+      - name: Install Windows SDK (for signtool)
+        if: env.CODE_SIGN_PFX_BASE64 != ''
+        run: |
+          choco install -y windows-sdk --no-progress
+      - name: Restore code signing certificate from secret
+        if: env.CODE_SIGN_PFX_BASE64 != ''
         shell: pwsh
         run: |
-          Compress-Archive -Path ./rustdesk/*.dll, ./rustdesk/*.exe -DestinationPath ./rustdesk/unsigned_files.zip -CompressionLevel Fastest
+          $pfxBase64 = "${{ secrets.CODE_SIGN_PFX_BASE64 }}"
+          if ([string]::IsNullOrWhiteSpace($pfxBase64)) {
+            Write-Host "No PFX provided, skipping signing."
+            exit 0
+          }
+          $bytes = [System.Convert]::FromBase64String($pfxBase64)
+          [IO.File]::WriteAllBytes("$env:RUNNER_TEMP\signing.pfx", $bytes)
 
-      - name: sign dlls
-        continue-on-error: true
-        shell: bash
-        run: |
-          if [ ! -z "${{ secrets.SIGN_BASE_URL }}" ] && [ ! -z "${{ secrets.SIGN_API_KEY }}" ]; then
-            curl -X POST -F "file=@./rustdesk/unsigned_files.zip" \
-              -H "X-API-KEY: ${{ secrets.SIGN_API_KEY }}" \
-              -m 900 \
-              "${{ secrets.SIGN_BASE_URL }}/sign/" -o ./rustdesk/signed_files.zip
-          else
-            echo "Signing skipped - signing URL or API key not configured"
-            cp ./rustdesk/unsigned_files.zip ./rustdesk/signed_files.zip
-          fi
-
-      - name: unzip dlls
-        continue-on-error: true
+      - name: Sign executables and DLLs with signtool
+        if: env.CODE_SIGN_PFX_BASE64 != ''
         shell: pwsh
         run: |
-          Expand-Archive -Path ./rustdesk/signed_files.zip -DestinationPath ./rustdesk/ -Force
-          Remove-Item ./rustdesk/unsigned_files.zip
-          Remove-Item ./rustdesk/signed_files.zip
+          $pfxPath = "$env:RUNNER_TEMP\signing.pfx"
+          $password = "${{ secrets.CODE_SIGN_PASSWORD }}"
+          $filesToSign = Get-ChildItem -Path ./rustdesk -Include *.exe, *.dll -Recurse | ForEach-Object { $_.FullName }
 
+          foreach ($file in $filesToSign) {
+            Write-Host "Signing: $file"
+            & "C:\Program Files (x86)\Windows Kits\10\bin\10.0.22621.0\x64\signtool.exe" sign `
+              /fd SHA256 `
+              /f "$pfxPath" `
+              /p "$password" `
+              /tr http://timestamp.digicert.com `
+              /td SHA256 `
+              "$file"
+
+            if ($LASTEXITCODE -ne 0) {
+              Write-Error "Failed to sign $file"
+              exit 1
+            }
+          }
+
+      - name: Sign MSI installer 
+        if: env.CODE_SIGN_PFX_BASE64 != '' && Test-Path ./SignOutput/rustdesk.msi
+        shell: pwsh
+        run: |
+          $pfxPath = "$env:RUNNER_TEMP\signing.pfx"
+          $password = "${{ secrets.CODE_SIGN_PASSWORD }}"
+
+          Write-Host "Signing MSI: ./SignOutput/rustdesk.msi"
+          & "C:\Program Files (x86)\Windows Kits\10\bin\10.0.22621.0\x64\signtool.exe" sign `
+            /fd SHA256 `
+            /f "$pfxPath" `
+            /p "$password" `
+            /tr http://timestamp.digicert.com `
+            /td SHA256 `
+            /as `
+            "./SignOutput/rustdesk.msi"
+
+          if ($LASTEXITCODE -ne 0) {
+            Write-Error "Failed to sign MSI"
+            exit 1
+          }
+          
       - name: Create custom.txt file
         shell: bash
         run: |
@@ -638,33 +670,6 @@ jobs:
           customHeaders: '{"Content-Type": "application/json"}'
           data: '{"uuid": "${{ inputs.uuid }}", "status": "85% complete"}'
 
-      - name: zip exe and msi
-        continue-on-error: true
-        shell: pwsh
-        run: |
-          Compress-Archive -Path ./SignOutput/*.exe, ./SignOutput/*.msi -DestinationPath ./SignOutput/unsigned_files.zip -CompressionLevel Fastest
-
-      - name: sign exe and msi
-        continue-on-error: true
-        shell: bash
-        run: |
-          if [ ! -z "${{ secrets.SIGN_BASE_URL }}" ] && [ ! -z "${{ secrets.SIGN_API_KEY }}" ]; then
-            curl -X POST -F "file=@./SignOutput/unsigned_files.zip" \
-              -H "X-API-KEY: ${{ secrets.SIGN_API_KEY }}" \
-              -m 900 \
-              "${{ secrets.SIGN_BASE_URL }}/sign/" -o ./SignOutput/signed_files.zip
-          else
-            echo "Signing skipped - signing URL or API key not configured"
-            cp ./SignOutput/unsigned_files.zip ./SignOutput/signed_files.zip
-          fi
-
-      - name: unzip exe and msi
-        continue-on-error: true
-        shell: pwsh
-        run: |
-          Expand-Archive -Path ./SignOutput/signed_files.zip -DestinationPath ./SignOutput/ -Force
-          Remove-Item ./SignOutput/unsigned_files.zip
-          Remove-Item ./SignOutput/signed_files.zip
 
       - name: rename rustdesk.exe to filename.exe
         run: |
