--- a/.github/workflows/generator-windows.yml
+++ b/.github/workflows/generator-windows.yml
@@ -566,72 +566,111 @@ jobs:
           method: 'POST'
           customHeaders: '{"Content-Type": "application/json"}'
           data: '{"uuid": "${{ inputs.uuid }}", "status": "70% complete, this step takes about 5 minutes, be patient."}'
+
       - name: Install Windows SDK (for signtool)
-        continue-on-error: true  
         run: |
-           choco install -y windows-sdk --no-progress
-    
+          choco install -y windows-sdk --no-progress
+        shell: pwsh
+
       - name: Restore code signing certificate from secret
-        continue-on-error: true
+        id: restore-cert
         shell: pwsh
         run: |
           $pfxBase64 = "${{ secrets.CODE_SIGN_PFX_BASE64 }}"
           if ([string]::IsNullOrWhiteSpace($pfxBase64)) {
-            Write-Error "Secret CODE_SIGN_PFX_BASE64 is missing. Cannot sign."
+            Write-Host "##[warning]Secret CODE_SIGN_PFX_BASE64 is missing. Skipping code signing."
+            echo "cert_restored=false" >> "$env:GITHUB_OUTPUT"
+            exit 0
+          }
+
+          try {
+            $bytes = [System.Convert]::FromBase64String($pfxBase64)
+            $pfxPath = "$env:RUNNER_TEMP\signing_$(Get-Random).pfx"
+            [IO.File]::WriteAllBytes($pfxPath, $bytes)
+            Write-Host "Certificate restored to temporary file."
+            echo "cert_restored=true" >> "$env:GITHUB_OUTPUT"
+            echo "pfx_path=$pfxPath" >> "$env:GITHUB_OUTPUT"
+          } catch {
+            Write-Error "Failed to decode or write PFX certificate: $_"
             exit 1
           }
-          $bytes = [System.Convert]::FromBase64String($pfxBase64)
-          [IO.File]::WriteAllBytes("$env:RUNNER_TEMP\signing.pfx", $bytes)
-      
-      - name: Sign executables and DLLs with signtool
-        continue-on-error: true
+
+      - name: Locate signtool.exe
+        id: find-signtool
+        if: steps.restore-cert.outputs.cert_restored == 'true'
         shell: pwsh
         run: |
-          $pfxPath = "$env:RUNNER_TEMP\signing.pfx"
+          $signtool = Get-ChildItem -Path "C:\Program Files (x86)\Windows Kits\10\bin" -Recurse -Include signtool.exe | Select-Object -First 1
+          if (-not $signtool) {
+            Write-Error "signtool.exe not found in Windows SDK installation."
+            exit 1
+          }
+          Write-Host "Using signtool: $($signtool.FullName)"
+          echo "signtool_path=$($signtool.FullName)" >> "$env:GITHUB_OUTPUT"
+
+      - name: Sign EXE and DLL files
+        if: steps.restore-cert.outputs.cert_restored == 'true'
+        shell: pwsh
+        run: |
+          $pfxPath = "${{ steps.restore-cert.outputs.pfx_path }}"
           $password = "${{ secrets.CODE_SIGN_PASSWORD }}"
-          $filesToSign = Get-ChildItem -Path ./rustdesk -Include *.exe, *.dll -Recurse | ForEach-Object { $_.FullName }
-          foreach ($file in $filesToSign) {
+          $signtool = "${{ steps.find-signtool.outputs.signtool_path }}"
+
+          $files = Get-ChildItem -Path ./rustdesk -Include *.exe, *.dll -Recurse | ForEach-Object { $_.FullName }
+          if ($files.Count -eq 0) {
+            Write-Host "No EXE/DLL files found to sign."
+            return
+          }
+
+          foreach ($file in $files) {
             Write-Host "Signing: $file"
-            & "C:\Program Files (x86)\Windows Kits\10\bin\10.0.22621.0\x64\signtool.exe" sign `
-              /fd SHA256 `
-              /f "$pfxPath" `
-              /p "$password" `
-              /tr https://timestamp.digicert.com `
-              /td SHA256 `
-              "$file"
-      
+            & $signtool sign /fd SHA256 /f "$pfxPath" /p "$password" /tr https://timestamp.digicert.com /td SHA256 "$file"
             if ($LASTEXITCODE -ne 0) {
               Write-Error "Failed to sign $file"
               exit 1
             }
           }
-      
+
       - name: Sign MSI installer
+        if: steps.restore-cert.outputs.cert_restored == 'true'
         shell: pwsh
         run: |
           $msiPath = "./SignOutput/rustdesk.msi"
           if (-Not (Test-Path $msiPath)) {
-            Write-Error "MSI file not found: $msiPath"
-            exit 1
+            Write-Host "MSI not found at $msiPath. Skipping MSI signing."
+            return
           }
-      
-          $pfxPath = "$env:RUNNER_TEMP\signing.pfx"
+
+          $pfxPath = "${{ steps.restore-cert.outputs.pfx_path }}"
           $password = "${{ secrets.CODE_SIGN_PASSWORD }}"
-      
+          $signtool = "${{ steps.find-signtool.outputs.signtool_path }}"
+
           Write-Host "Signing MSI: $msiPath"
-          & "C:\Program Files (x86)\Windows Kits\10\bin\10.0.22621.0\x64\signtool.exe" sign `
-            /fd SHA256 `
-            /f "$pfxPath" `
-            /p "$password" `
-            /tr https://timestamp.digicert.com `
-            /td SHA256 `
-            /as `
-            "$msiPath"
-      
+          & $signtool sign /fd SHA256 /f "$pfxPath" /p "$password" /tr https://timestamp.digicert.com /td SHA256 /as "$msiPath"
           if ($LASTEXITCODE -ne 0) {
             Write-Error "Failed to sign MSI"
             exit 1
           }
+
+      - name: Clean up temporary certificate
+        if: always() && steps.restore-cert.outputs.cert_restored == 'true'
+        shell: pwsh
+        run: |
+          $pfxPath = "${{ steps.restore-cert.outputs.pfx_path }}"
+          if (Test-Path $pfxPath) {
+            Remove-Item $pfxPath -Force
+            Write-Host "Temporary certificate deleted."
+          }
+
+      - name: Upload signed artifacts (optional)
+        if: success()
+        uses: actions/upload-artifact@v4
+        with:
+          name: signed-binaries
+          path: |
+            ./rustdesk/**/*.exe
+            ./rustdesk/**/*.dll
+            ./SignOutput/rustdesk.msi
 
       - name: Create custom.txt file
         shell: bash
