--- a/.github/workflows/generator-windows.yml
+++ b/.github/workflows/generator-windows.yml
@@ -692,39 +692,43 @@ jobs:
           echo "tag=$r" >> $env:GITHUB_OUTPUT
           
       - name: Set build filename
-          run: |
-            NAME="${{ inputs.filename }}-${{ steps.conn.outputs.conn }}-${{ steps.tag.outputs.tag }}"
-            echo "BUILD_FILENAME=$NAME" >> "$GITHUB_ENV"
+        id: build_name
+        shell: bash
+        run: |
+          NAME="${{ inputs.filename }}-${{ steps.conn.outputs.conn }}-${{ steps.tag.outputs.tag }}"
+          echo "BUILD_FILENAME=$NAME" >> "$GITHUB_ENV"
+          echo "value=$NAME" >> "$GITHUB_OUTPUT"
 
       - name: rename EXE
         run: |
-          mv ./SignOutput/rustdesk.exe "./SignOutput/${{BUILD_FILENAME}}.exe" || echo "rustdesk"
+          mv ./SignOutput/rustdesk.exe "./SignOutput/$BUILD_FILENAME.exe" || echo "rustdesk"
 
       - name: rename MSI
         continue-on-error: true
         run: |
-          mv ./SignOutput/rustdesk.msi "./SignOutput/${{BUILD_FILENAME}}.msi" || echo "rustdesk"
+          mv ./SignOutput/rustdesk.msi "./SignOutput/$BUILD_FILENAME.msi" || echo "rustdesk"
 
       - name: send file server
         if: ${{ fromJson(inputs.extras).gdpro == 'true' }}
         shell: bash
         run: |
-          curl -i -X POST -H "Content-Type: multipart/form-data" -H "Authorization: Bearer ${{ fromJson(inputs.extras).token }}" -F "file=@./SignOutput/${{BUILD_FILENAME}}.exe" -F "uuid=${{ inputs.uuid }}" ${{ secrets.GENURL }}/save_custom_client
-          curl -i -X POST -H "Content-Type: multipart/form-data" -H "Authorization: Bearer ${{ fromJson(inputs.extras).token }}" -F "file=@./SignOutput/${{BUILD_FILENAME}}.msi" -F "uuid=${{ inputs.uuid }}" ${{ secrets.GENURL }}/save_custom_client || true
+          curl -i -X POST -H "Content-Type: multipart/form-data" -H "Authorization: Bearer ${{ fromJson(inputs.extras).token }}" -F "file=@./SignOutput/$BUILD_FILENAME.exe" -F "uuid=${{ inputs.uuid }}" ${{ secrets.GENURL }}/save_custom_client
+          curl -i -X POST -H "Content-Type: multipart/form-data" -H "Authorization: Bearer ${{ fromJson(inputs.extras).token }}" -F "file=@./SignOutput/$BUILD_FILENAME.msi" -F "uuid=${{ inputs.uuid }}" ${{ secrets.GENURL }}/save_custom_client || true
 
    
-       - name: Create GitHub Release and Upload Assets
-          if: success()
-          uses: softprops/action-gh-release@v2
-          env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          with:
-            tag_name: "${{BUILD_FILENAME}}"
-            name: "${{BUILD_FILENAME}}"
-            prerelease: true
-            files: |
-              ./SignOutput/${{BUILD_FILENAME}}.exe
-              ./SignOutput/${{BUILD_FILENAME}}.msi
+      - name: Create GitHub Release and Upload Assets
+        if: success()
+        uses: softprops/action-gh-release@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ steps.build_name.outputs.value }}
+          name: Release ${{ steps.build_name.outputs.value }}
+          prerelease: true
+          files: |
+            ./SignOutput/${{ steps.build_name.outputs.value }}.exe
+            ./SignOutput/${{ steps.build_name.outputs.value }}.msi
+           
       - name: Report Status
         uses: fjogeleit/http-request-action@v1
         with:
