--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -11,8 +11,13 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      DOCKER_IMAGE_NAME: gdpro
     steps:
-      - name: set docker image tag
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set docker image tag
         run: |
           if [[ "${{ github.ref }}" == "refs/heads/dev" ]]; then
             echo "IMAGE_TAG=dev" >> "$GITHUB_ENV"
@@ -31,8 +36,8 @@ jobs:
         uses: docker/login-action@v3
         if: env.CREATE_IMAGE == 'true'
         with:
-            username: ${{ secrets.DOCKERHUB_USERNAME }}
-            password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -42,5 +47,6 @@ jobs:
         uses: docker/build-push-action@v6
         if: env.CREATE_IMAGE == 'true'
         with:
+          context: .
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}:${{ env.IMAGE_TAG }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.DOCKER_IMAGE_NAME }}:${{ env.IMAGE_TAG }}
