--- a/.github/workflows/generator-windows.yml
+++ b/.github/workflows/generator-windows.yml
@@ -732,7 +732,7 @@ jobs:
             mv "./SignOutput/rustdesk.msi" "./SignOutput/${BUILD_FILENAME}.msi" && \
             echo "✅ MSI renamed to ${BUILD_FILENAME}.msi" || \
             echo "⚠️ MSI not found, skipping rename."
-               
+
       - name: Create GitHub Release and Upload Assets
         if: success()
         uses: softprops/action-gh-release@v2
@@ -745,7 +745,8 @@ jobs:
           files: |
             ./SignOutput/${{ steps.build_name.outputs.value }}.exe
             ./SignOutput/${{ steps.build_name.outputs.value }}.msi
-            - name: Send to file server
+      
+      - name: Send to file server
         if: ${{ fromJson(inputs.extras).gdpro == 'true' }}
         shell: bash
         run: |
@@ -768,7 +769,7 @@ jobs:
               -F "uuid=$UUID" \
               "$URL" && \
             echo "✅ MSI uploaded" || \
-            echo "⚠️ MSI not found, skipping upload."
+            echo "⚠️ MSI not found, skipping upload.
            
       - name: Report Status
         uses: fjogeleit/http-request-action@v1
